fixed align middle of left tisheet octicons -> introduced css class octicon-tisheet

--- a/public/main.css
+++ b/public/main.css
@@ -157,6 +157,13 @@ a.option-active {
 	cursor: pointer;
 }
 
+.octicon-tisheet {
+	display: inline-block;
+
+	margin-top: 8px;
+	padding-left: 3px;
+}
+
 .ajax-loader {
 	margin: 23px 23px 0;
 }
